# shellcraft

./: README.md  install.sh  package-lock.json  package.json
shell/: shellcraft.zsh
src/: App.css  App.tsx  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
